--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ var/
 node_modules/
 bower_components/
 .idea
+src/staticfiles/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
